Voice search functionality added forgot password functionality added

--- a/zonoapp/templates/pages/authentication/forget-password.html
+++ b/zonoapp/templates/pages/authentication/forget-password.html
@@ -56,22 +56,14 @@
               <div>
                 <div><a class="logo" href="/index"><img class="img-fluid for-light" src="{% static 'assets/images/logo/logo.png' %}" alt="looginpage"><img class="img-fluid for-dark m-auto" src="{% static 'assets/images/logo/logo_dark.png' %}" alt="looginpage"></a></div>
                 <div class="login-main">
-                  <form class="theme-form">
+                  <form class="theme-form" action="{% url 'change_password' %}">
                     <h4>Reset Your Password</h4>
                     <div class="form-group">
-                      <label class="col-form-label">Enter Your Mobile Number</label>
-                      <div class="row">
-                        <div class="col-4 col-sm-3">
-                          <input class="form-control mb-1" type="text" value="+ 91">
-                        </div>
-                        <div class="col-8 col-sm-9">
-                          <input class="form-control mb-1" type="tel" value="000-000-0000">
-                        </div>
-                        <div class="col-12">
-                          <div class="text-end">
-                            <button class="btn btn-primary btn-block m-t-10" type="submit">Send</button>
-                          </div>
-                        </div>
+                      <label class="col-form-label">Enter Your Email Address</label>
+                      <input id="email" class="form-control" type="email" placeholder="Enter your email" required>
+                      <div class="text-end">
+                        <button id="send-otp-btn" class="btn btn-primary btn-block m-t-10" type="button">Send OTP</button>
+                        <button id="send-otp-btn-wait" style="display: none;" class="btn btn-primary btn-block m-t-10" type="button" disabled>Send OTP  <i class="fa fa-spin fa-circle-o-notch"></i></button>
                       </div>
                     </div>
                     <div class="mt-4 mb-4"><span class="reset-password-link">If don't receive OTP?  <a class="btn-link text-danger" href="#">Resend</a></span></div>
@@ -79,34 +71,36 @@
                       <label class="col-form-label pt-0">Enter OTP</label>
                       <div class="row">
                         <div class="col">
+                          <input id="otp-input" class="form-control text-center opt-text" type="text"  placeholder="Enter OTP">
+                        </div>
+                        <!-- <div class="col">
                           <input class="form-control text-center opt-text" type="text" value="00" maxlength="2">
                         </div>
                         <div class="col">
                           <input class="form-control text-center opt-text" type="text" value="00" maxlength="2">
                         </div>
-                        <div class="col">
-                          <input class="form-control text-center opt-text" type="text" value="00" maxlength="2">
-                        </div>
-                      </div>
+                      </div> -->
                     </div>
                     <h6 class="mt-4">Create Your Password</h6>
                     <div class="form-group">
                       <label class="col-form-label">New Password</label>
                       <div class="form-input position-relative">
-                        <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+                        <input id="id_new_password1" class="form-control" type="password" name="login[password]" required="" placeholder="*********">
                         <div class="show-hide"><span class="show"></span></div>
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-form-label">Retype Password</label>
-                      <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+                      <input id="id_new_password2" class="form-control" type="password" name="login[password]" required="" placeholder="*********">
                     </div>
                     <div class="form-group mb-0">
                       <div class="checkbox p-0">
                         <input id="checkbox1" type="checkbox">
                         <label class="text-muted" for="checkbox1">Remember password</label>
                       </div>
-                      <button class="btn btn-primary btn-block w-100" type="submit">Done                          </button>
+                      <div class="form-group mb-0">
+                        <button id="done-btn" class="btn btn-primary btn-block w-100" type="button" onclick="submitForm()" disabled>Done</button>
+                      </div>
                     </div>
                     <p class="mt-4 mb-0 text-center">Already have an password?<a class="ms-2" href="/login_simple">Sign in</a></p>
                   </form>
@@ -131,6 +125,183 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="{% static 'assets/js/script.js' %}"></script>
+     <!-- Script block -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Plugin used-->
+    <script>
+      function submitForm(){
+          console.log("sumbit clicked")
+          let formData = {
+            'email': $('#email').val(),
+            'new_password1': $('#id_new_password1').val(),
+            'new_password2': $('#id_new_password2').val()
+          };
+          let email = $('#email').val();
+          let newPassword1 = $('#id_new_password1').val();
+          let newPassword2 = $('#id_new_password2').val();
+          // Validation checks
+            if (!email) {
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Email must not be empty.'
+                });
+                return;
+            }
+            if (newPassword1.length < 8 || !/[!@#$%^&*]/.test(newPassword1)) {
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Password must be at least 8 characters long and include at least 1 special character.'
+                });
+                return;
+            }
+            if (newPassword1 !== newPassword2) {
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Passwords do not match.'
+                });
+                return;
+            }
+          $.ajax({
+            url: "{% url 'change_password' %}",  // Django URL for change password view
+            method: 'POST',
+            data: formData,
+            success: function(response) {
+              console.log(response)
+              if (response.status === 'success') {
+                console.log(response)
+                // alert(response.message);  // Show success message
+                Swal.fire({
+                    icon: 'success',
+                    text: response.message
+                  }).then(() => { window.location.href = '/login_home'; }); // Redirect to login page
+                  // Redirect to login page
+              }else{
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Error occured: ' + response.message
+                });
+              }
+            },
+            error: function(xhr, status, error) {
+              console.log(error)
+                                        // Show error message using SweetAlert2
+                  Swal.fire({
+                    icon: 'error',
+                    text: 'Error occured: ' + error
+                });
+               }
+          });
+      } 
+      
+      $(document).ready(function() {
+      // submit form
+      
+        $('#send-otp-btn').click(function() {
+          let email = $('#email').val();
+          if (validateEmail(email)) {
+            //disable send_otp button
+            $("#send-otp-btn-wait").show();
+            $("#send-otp-btn").hide();
+            $.ajax({
+              url: "{% url 'send_otp' %}",
+              method: 'GET',
+              data: { email: email },
+              success: function(response) {
+                if (response.status === 'success') {
+                  // alert('OTP sent successfully to your email.');
+                  Swal.fire({
+                    icon: 'success',
+                    text: 'OTP sent successfully to your email.'
+                  });
+                  $('#otp-section').show(); // Show OTP section after email is verified
+                  // enable send otp button 
+                  $("#send-otp-btn-wait").hide();
+                  $("#send-otp-btn").show();  
+                  
+                } else {
+                  // alert('Failed to send OTP. Please try again.');
+                  Swal.fire({
+                    icon: 'error',
+                    text: 'Failed to send OTP. Please try again.'
+                  });
+                  // enable send otp button 
+                  $("#send-otp-btn-wait").hide();
+                  $("#send-otp-btn").show();                  
+                }
+              },
+              error: function() {
+                // alert();
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Error in sending OTP.'
+                });
+                // enable send otp button 
+                $("#send-otp-btn-wait").hide();
+                $("#send-otp-btn").show();
+              }
+            });
+          } else {
+            // alert('Please enter a valid email address.');
+              Swal.fire({
+                    icon: 'error',
+                    text: 'Please enter a valid email address.'
+                });
+              // enable send otp button 
+              $("#send-otp-btn-wait").hide();
+              $("#send-otp-btn").show();
+          }
+        });
+        // Validate OTP and enable "Done" button
+        $('#otp-input').on('blur', function() {
+          let otp = $(this).val(); // Get the value of the OTP input field
+          let email = $("#email").val();
+          
+          if (otp.trim() !== '') { // Proceed only if the OTP field is not empty
+            $.ajax({
+              url: "{% url 'validate_otp' %}",  // Django URL for OTP validation
+              method: 'GET',
+              data: { otp: otp ,email:email},
+              success: function(response) {
+                console.log(response)
+                if (response.status === 'success') {
+                  // alert('OTP verified successfully.');
+                  Swal.fire({
+                    icon: 'success',
+                    text: 'OTP verified successfully.'
+                  });
+                  $('#done-btn').prop('disabled', false); // Enable Done button on success
+                  
+                  // enable send otp button 
+                  $("#send-otp-btn-wait").hide();
+                  $("#send-otp-btn").show();
+                } else {
+                  // alert('Invalid OTP. Please try again.');
+                  Swal.fire({
+                    icon: 'error',
+                    text: 'Invalid OTP. Please try again.'
+                  });
+                  // enable send otp button 
+                  $("#send-otp-btn-wait").hide();
+                  $("#send-otp-btn").show();
+                }
+              },
+              error: function() {
+                // alert('Error in verifying OTP.');
+                Swal.fire({
+                    icon: 'error',
+                    text: 'Error in verifying OTP.'
+                  });
+              }
+            });
+          }
+        });
+        
+      });
+      // Helper function to validate email format
+      function validateEmail(email) {
+        var re = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+        return re.test(email);
+      }
+    </script>
   </body>
 </html>
